--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Gamer</title>
     <link rel="shortcut icon" type="image" href="images/Frame.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <script src="https://kit.fontawesome.com/86b91e6fdc.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -20,21 +23,13 @@
                 </div>
             </div> -->
             <nav class="banner">
-                <div class="both">
-                    <div class="nav-left">
-                    <img class="logo" src="images/Frame.png" alt="banner">
-                    <h3 class="title-web"><span class="g">G</span>amer</h3>
-                </div>
-                <div class="nav-right">
-                    <ul>
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Developers</a></li>
-                        <li><button class="btn-primary">Follow Us On</button></li>
-                    </ul>
-                </div>
-            </div>
-                
-
+                <img class="logo" src="images/Frame.png" alt="banner">
+                <h3 class="title-web"><span class="g">G</span>amer</h3>
+                <ul class="menu">
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Developers</a></li>
+                    <li><button class="btn-primary">Follow Us On <i class="fa-brands fa-youtube"></i><i class="gap"></i><i class="fa-brands fa-tiktok"></i></i></button></li>
+                </ul>
             </nav>
         </nav>
     </header>
