main part iamge added

--- a/index.html
+++ b/index.html
@@ -54,6 +54,36 @@
                     <h4><strong>“unleash the gamer in everyone”</strong></h4>
                 </div>
             </div>
+
+            <!-- Main second part start -->
+
+            <div class="sec-container">
+                <div>
+                    <h3 class="sec-header"><span class="online">Online Games</span><span class="funny">Funny Videos</span></h3>
+                    <p class="sec-header-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+                </div>
+                <div class="sec-img-section">
+                    <img class="img-size" src="images/Rectangle 4.png" alt="">
+                    <img class="img-size" src="images/Rectangle 5.png" alt="">
+                    <img class="img-size" src="images/Rectangle 7.png" alt="">
+                    <img class="img-size" src="images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+
+            <div class="third-container">
+                <div class="third-text">
+                    <h3 class="third-header">Play Instantly,</h3>
+                    <h3 class="third-header-part">No Downloads No Install.</h3>
+                    <p class="third-header-part-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+                <div class="third-container-img">
+                    <img class="third-container-first-img" src="images/Rectangle 55.png" alt="">
+                    <img class="third-container-second-img" src="images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+
+            
+
         </main>
     </header>
     
