Add career part

--- a/index.html
+++ b/index.html
@@ -82,7 +82,37 @@
                 </div>
             </div>
 
-            
+            <div class="main-fourth-part">
+                <div class="fourth-part-start">
+                    <h3 class="fourth-header">Careers</h3>
+                    <p class="fourth-header-describtion">Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                    <div class="list-item">
+                    <li class="list-first-part">
+                        Multimedia Artist +<br></br>
+                        Data Engineer + <br></br>
+                        Adroid Engineer + <br></br>
+                        Server Developer + <br></br>
+                        Group Financial Accountant + <br></br>
+                        Senior User Acuisition Specialist + <br></br>
+                    </li>
+
+                    <li class="list-second-part">
+                        Lisbon, Portugal<br></br>
+                        Lisbon, Portugal<br></br>
+                        Zoetermeer, Netherlands<br></br>
+                        Lisbon, Portugal<br></br>
+                        London, United Kingdom<br></br>
+                        Lisbon, Portugal<br></br>
+                    </li>
+                </div>
+                </div>
+
+                    <div class="fourth-images">
+                        <img src="images/Group 65.png" alt="">
+                    </div>
+
+                </div>
+            </div>
 
         </main>
     </header>
