finished the main part

--- a/index.html
+++ b/index.html
@@ -114,8 +114,53 @@
                 </div>
             </div>
 
+            <div class="main-last-part">
+                <div class="button-first-row">
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 11.png" alt=""> 
+                        <span class="first">Action Games</span>
+                    </div>
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 12.png" alt=""> 
+                        <span class="first">Adventure Games</span>
+                    </div>
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 13.png" alt=""> 
+                        <span class="first">Acrade Games</span>
+                    </div>
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 14.png" alt=""> 
+                        <span class="first">Educational Games</span>
+                    </div>
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 15.png" alt=""> 
+                        <span class="first">Word Games</span>
+                    </div>
+                </div>
+                <div class="button-second-row">
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 16.png" alt=""> 
+                        <span class="first">Role Playing Games</span>
+                    </div>
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 17.png" alt=""> 
+                        <span class="first">Music & Audio Games</span>
+                    </div>
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 18.png" alt=""> 
+                        <span class="first">Puzzle Games</span>
+                    </div>
+                    <div class="btn-last">
+                        <img class="btn-img" src="images/Rectangle 19.png" alt=""> 
+                        <span class="first">Strategy Games</span>
+                    </div>
+                </div>
+            </div>
+
         </main>
     </header>
+    
+
     
 </body>
 </html>
