--- a/index.html
+++ b/index.html
@@ -160,7 +160,39 @@
         </main>
     </header>
     
+    <footer>
+        <div class="footer-container">
+                <div class="footer-heading">
+                    <img class="footer-img" src="images/Frame.png" alt="banner">
+                    <h3 class="footer-title"><span class="g">G</span>amer</h3>
+                </div>
+                <div class="footer-list">
+                    <ul>
+                        <li>Our Story</li>
+                        <li>Games</li>
+                        <li>Web Games</li>
+                        <li>Careers</li>
+                        <li>Support</li>
+                        <li>My Account</li>
+                    </ul>
+                </div>
+                <div class="footer-icon">
+                    <button class="footer-btn"><i class="fa-brands fa-facebook"></i></button>
+                    <button class="footer-btn"><i class="fa-brands fa-twitter"></i></button>
+                    <button class="footer-btn"><i class="fa-brands fa-linkedin"></i></button>
+                    <button class="footer-btn"><i class="fa-brands fa-youtube"></i></button>
+                </div>
+                <div class="footer-last-part">
+                    <ul>
+                        <li>Terms and Conditions</li>
+                        <li>Privacy Policy</li>
+                        <li>Cookie Policy</li>
+                        <li>Policy Settings</li>
+                    </ul>
+                </div>
+                <p class="footer-description">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </footer>
 
-    
 </body>
 </html>
