--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <div class="sec-container">
                 <div>
-                    <h3 class="sec-header"><span class="online">Online Games</span><span class="funny">Funny Videos</span></h3>
+                    <h3 class="sec-header"><span class="online">Online Games</span><span class="funny"> Funny Videos</span></h3>
                     <p class="sec-header-description">A Collection of Hilarious Videos to Brighten Your Day</p>
                 </div>
                 <div class="sec-img-section">
@@ -105,6 +105,7 @@
                         Lisbon, Portugal<br></br>
                     </li>
                 </div>
+                <button class="main-fourth-part-button">SEE ALL POSITIONS</button>
                 </div>
 
                     <div class="fourth-images">
